fix content jumping when scroll appears

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,11 +4,10 @@ html,
 body {
   margin: 0;
   padding: 0;
-  overflow: auto;
-}
-
-html {
   width: 600px;
+  min-height: 100px;
+  max-height: 600px;
+  overflow: auto;
 }
 
 * {
